# nrf52840_thermocouple

./: Cargo.toml  Embed.toml  Makefile  memory.x
.cargo/: config.toml
src/: main.rs
