[package]
name = "nrf52840_thermocouple"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
display-interface-i2c = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
format_no_std = "1.2.0"
max31855 = "0.1.0"
max31855-rs = "0.1.0"
micromath = "2.1.0"
nrf52840-hal = {version = "0.18.0", features = ["rt"]}
panic-rtt-target = "0.1.3"
rtic = {version = "2.1.1", features = ["thumbv7-backend"]}
rtic-monotonics = {version = "2.0.1", features = ["nrf52840"]}
rtt-target = "0.5.0"
smart-leds = "0.4.0"
ssd1306 = "0.9.0"
u8g2-fonts = "0.4.0"
# ws2812-spi = {version = "0.5.0", features = ["mosi_idle_high"]}
ws2812-spi = "0.5.0"
ws2812-timer-delay = "0.3.0"


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
